[package]
name = "leaf-ffi"
version = "0.1.0"
edition = "2021"
authors = ["your name here"]

[lib]
name = "leaf"
path = "src/lib.rs"
crate-type = ["staticlib"] 

[dependencies]
log = "0.4"
bytes = "1.5"
fern = "0.6"
leaf = { path = "../leaf" }

[features]
default = ["default-ring"]

default-aws-lc = ["leaf/default-aws-lc"]
default-ring    = ["leaf/default-ring"]
default-openssl = ["leaf/default-openssl"]
outbound-quic   = ["leaf/outbound-quic"]
auto-reload     = ["leaf/auto-reload"]
